Run spaCy on all debug sentences

--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "088033b5-c175-43e6-9332-5ffa2aa9cd59",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "61c079f1-91a3-4c2b-a075-56c460f12d5f",
    "metadata": {},
    "outputs": [
@@ -51,16 +51,16 @@
       "text/markdown": [
        "| Sentence | Example PClean preamble code |\n",
        "| --- | --- |\n",
-       "| Just had an insightful consultation with Dr. Kay Ryan in Baltimore. Feeling optimistic about my health! #HealthMatters #Baltimore | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
-       "| Dr. Kay Ryan's office at 321 Pine St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>address_key = PClean.resolve_dot_expression(trace.model, :Obs, :address)<br>row_trace[address_key] = \"321 Pine St.\"</pre> |\n",
-       "| Exploring Baltimore after an informative appointment with Dr. Kay Ryan. Loving this city's vibe! #BaltimoreAdventures #DoctorVisit | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
-       "| Dr. Kay Ryan, a neurologist, provided excellent care today. Grateful for her expertise! #Healthcare #BaltimoreDoctors | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"neurologist\"</pre> |\n",
-       "| Feeling reassured after my visit to Dr. Kay Ryan in Baltimore. She's truly exceptional! #FeelingGood #CityOfCharm | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
-       "| Had a great experience with Dr. Kay Ryan at 321 Pine St. in Baltimore. Her attention to detail is unmatched! #HealthCheck | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>address_key = PClean.resolve_dot_expression(trace.model, :Obs, :address)<br>row_trace[address_key] = \"321 Pine St.\"</pre> |\n",
-       "| From diagnosis to treatment, Dr. Kay Ryan, a cardiologist, covered it all. Baltimore, you're lucky to have her! #MedicalCare | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"cardiologist\"</pre> |\n",
-       "| Just wrapped up my appointment with Dr. Kay Ryan in Baltimore. Her professionalism is top-notch. #HealthJourney | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
-       "| Dr. Kay Ryan's office in Baltimore is so efficient and welcoming. A great experience overall! #DoctorVisit #CityCare | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
-       "| Can't say enough good things about Dr. Kay Ryan, a pediatrician, in Baltimore. Truly an outstanding doctor! #Grateful | <pre>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :given_name)<br>row_trace[given_name_key] = \"Kay\"<br>given_name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>row_trace[family_name_key] = \"Ryan\"<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"pediatrician\"</pre> |"
+       "| Just had an insightful consultation with Dr. Kay Ryan in Baltimore. Feeling optimistic about my health! #HealthMatters #Baltimore | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
+       "| Dr. Kay Ryan's office at 321 Pine St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>address_key = PClean.resolve_dot_expression(trace.model, :Obs, :address)<br>row_trace[address_key] = \"321 Pine St.\"</pre> |\n",
+       "| Exploring Baltimore after an informative appointment with Dr. Kay Ryan. Loving this city's vibe! #BaltimoreAdventures #DoctorVisit | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
+       "| Dr. Kay Ryan, a neurologist, provided excellent care today. Grateful for her expertise! #Healthcare #BaltimoreDoctors | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"neurologist\"</pre> |\n",
+       "| Feeling reassured after my visit to Dr. Kay Ryan in Baltimore. She's truly exceptional! #FeelingGood #CityOfCharm | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
+       "| Had a great experience with Dr. Kay Ryan at 321 Pine St. in Baltimore. Her attention to detail is unmatched! #HealthCheck | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>address_key = PClean.resolve_dot_expression(trace.model, :Obs, :address)<br>row_trace[address_key] = \"321 Pine St.\"</pre> |\n",
+       "| From diagnosis to treatment, Dr. Kay Ryan, a cardiologist, covered it all. Baltimore, you're lucky to have her! #MedicalCare | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"cardiologist\"</pre> |\n",
+       "| Just wrapped up my appointment with Dr. Kay Ryan in Baltimore. Her professionalism is top-notch. #HealthJourney | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
+       "| Dr. Kay Ryan's office in Baltimore is so efficient and welcoming. A great experience overall! #DoctorVisit #CityCare | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"</pre> |\n",
+       "| Can't say enough good things about Dr. Kay Ryan, a pediatrician, in Baltimore. Truly an outstanding doctor! #Grateful | <pre>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)<br>row_trace[name_key] = \"Kay Ryan\"<br>name_key = PClean.resolve_dot_expression(trace.model, :Obs, :family_name)<br>city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)<br>row_trace[city_key] = \"Baltimore\"<br>occupation_key = PClean.resolve_dot_expression(trace.model, :Obs, :occupation)<br>row_trace[occupation_key] = \"pediatrician\"</pre> |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "9ad06c20-4e09-4ca2-84af-285dd23c3dbc",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,35 @@
      "output_type": "stream",
      "text": [
       "Just had an insightful consultation with Dr. Kay Ryan in Baltimore. Feeling optimistic about my health! #HealthMatters #Baltimore\n",
-      "(Kay Ryan, Baltimore, Baltimore)\n"
+      "(Kay Ryan, Baltimore, Baltimore)\n",
+      "\n",
+      "Dr. Kay Ryan's office at 321 Pine St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare\n",
+      "(Kay Ryan, Baltimore, CityCare)\n",
+      "\n",
+      "Exploring Baltimore after an informative appointment with Dr. Kay Ryan. Loving this city's vibe! #BaltimoreAdventures #DoctorVisit\n",
+      "(Baltimore, Kay Ryan)\n",
+      "\n",
+      "Dr. Kay Ryan, a neurologist, provided excellent care today. Grateful for her expertise! #Healthcare #BaltimoreDoctors\n",
+      "(Kay Ryan, today)\n",
+      "\n",
+      "Feeling reassured after my visit to Dr. Kay Ryan in Baltimore. She's truly exceptional! #FeelingGood #CityOfCharm\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n",
+      "Had a great experience with Dr. Kay Ryan at 321 Pine St. in Baltimore. Her attention to detail is unmatched! #HealthCheck\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n",
+      "From diagnosis to treatment, Dr. Kay Ryan, a cardiologist, covered it all. Baltimore, you're lucky to have her! #MedicalCare\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n",
+      "Just wrapped up my appointment with Dr. Kay Ryan in Baltimore. Her professionalism is top-notch. #HealthJourney\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n",
+      "Dr. Kay Ryan's office in Baltimore is so efficient and welcoming. A great experience overall! #DoctorVisit #CityCare\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n",
+      "Can't say enough good things about Dr. Kay Ryan, a pediatrician, in Baltimore. Truly an outstanding doctor! #Grateful\n",
+      "(Kay Ryan, Baltimore)\n",
+      "\n"
      ]
     }
    ],
@@ -135,7 +163,9 @@
     "    print(sentence)\n",
     "    print(spacy_model(sentence).ents)\n",
     "\n",
-    "show_ents(debug_sentences[0][\"sentence\"])"
+    "for sentence_datum in debug_sentences:\n",
+    "    show_ents(sentence_datum[\"sentence\"])\n",
+    "    print()"
    ]
   }
  ],
