Add Stack Overflow link

--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "9ad06c20-4e09-4ca2-84af-285dd23c3dbc",
    "metadata": {},
    "outputs": [
@@ -132,6 +132,7 @@
     "spacy_model = spacy.load(_SPACY_MODEL_NAME)\n",
     "_PERSON_LABEL = 'PERSON'\n",
     "_LOCATION_LABEL = 'LOC'\n",
+    "# spaCy labels list example thanks to Stack Overflow user 'russhoppa': https://stackoverflow.com/a/78252807\n",
     "_SPACY_LABELS = spacy_model.get_pipe(\"ner\").labels\n",
     "assert _PERSON_LABEL in _SPACY_LABELS\n",
     "\n",
