Write PClean code template

--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -168,6 +168,39 @@
     "    show_ents(sentence_datum[\"sentence\"])\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5f71de7e-c9dc-404d-aa64-6e676defb0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pclean_template = string.Template(\n",
+    "    \"\"\"\n",
+    "# Create a new row trace for the hypothetical row\n",
+    "row_trace = Dict{PClean.VertexID, Any}()\n",
+    "$preamble\n",
+    "\n",
+    "# Add it to the trace\n",
+    "obs = trace.tables[:Obs].observations\n",
+    "row_id = gensym()\n",
+    "obs[row_id] = row_trace\n",
+    "\n",
+    "samples = []\n",
+    "for _ in 1:$N\n",
+    "    # Perform a Partilce Gibbs MCMC move to change our current sample of the row\n",
+    "    PClean.run_smc(!(trace, :Obs, row_id, PClean.InferenceConfig(1, 10))\n",
+    "    # Accumulate the sample\n",
+    "    push!(samples, trace.tables[:Obs].rows[row_id][br_idx]\n",
+    "end\n",
+    "\n",
+    "countmap(samples)\n",
+    "\"\"\".lstrip()\n",
+    ")\n",
+    "\n",
+    "PCLEAN_DEFAULT_N_SAMPLES = 100"
+   ]
   }
  ],
  "metadata": {
