Collapse debugging header

--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -740,7 +740,9 @@
   {
    "cell_type": "markdown",
    "id": "12002d31-981c-4c93-aa4a-7bf7f49585e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Debugging"
    ]
