refactor particles, they are now just namedtuples.

--- a/notes/Compare-Proposals.ipynb
+++ b/notes/Compare-Proposals.ipynb
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -199,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.exp(tok_posterior.log_ml - char_posterior.log_ml), tok_posterior.log_ml, char_posterior.log_ml"
+    "# np.exp(tok_posterior.log_ml - char_posterior.log_ml), tok_posterior.log_ml, char_posterior.log_ml"
    ]
   },
   {
@@ -228,7 +229,7 @@
     }
    ],
    "source": [
-    "np.std(np.exp(tok_posterior.log_weights)) / np.std(np.exp(char_posterior.log_weights)) "
+    "np.std(np.exp(tok_posterior.log_weights)) / np.std(np.exp(char_posterior.log_weights))"
    ]
   },
   {
@@ -583,7 +584,11 @@
     }
    ],
    "source": [
-    "np.exp(tok_posterior.log_ml - char_posterior.log_ml), tok_posterior.log_ml, char_posterior.log_ml"
+    "(\n",
+    "    np.exp(tok_posterior.log_ml - char_posterior.log_ml),\n",
+    "    tok_posterior.log_ml,\n",
+    "    char_posterior.log_ml,\n",
+    ")"
    ]
   },
   {
@@ -616,7 +621,8 @@
    "source": [
     "Empirical(np.exp(char_posterior.log_weights)).plot(label='char', color='r')\n",
     "Empirical(np.exp(tok_posterior.log_weights)).plot(label='token', color='b')\n",
-    "pl.semilogx(); pl.legend();"
+    "pl.semilogx()\n",
+    "pl.legend();"
    ]
   },
   {
