--- a/notes/Token-Healing.ipynb
+++ b/notes/Token-Healing.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -56,8 +57,8 @@
    "source": [
     "set_seed(1234)\n",
     "\n",
-    "#lm = load_model_by_name('mock-gpt2')\n",
-    "#lm = load_model_by_name('gpt2', temperature=0.12)\n",
+    "# lm = load_model_by_name('mock-gpt2')\n",
+    "# lm = load_model_by_name('gpt2', temperature=0.12)\n",
     "lm = load_model_by_name('gpt2')\n",
     "\n",
     "prompt = ' Sequential Monte Carlo is g'"
@@ -116,26 +117,30 @@
     "T = 0\n",
     "while np.exp(tracer.root.log_mass) > 1e-20:\n",
     "    T += 1\n",
-    "    if T > 20: break\n",
+    "    if T > 20:\n",
+    "        break\n",
     "    with tracer:\n",
     "        particle = PromptParticle(lm, prompt, draw=tracer)\n",
     "        log_mass = tracer.cur.log_mass  # must do in the with-statement!\n",
     "\n",
     "    print(\n",
-    "        f'{tracer.root.log_mass}\\t', particle\n",
-    "#        + colors.light.cyan % '['\n",
-    "#        + (colors.light.cyan % '|').join(repr(y)[1:-1] for y in particle.context)\n",
-    "#        + colors.light.cyan % ']'\n",
+    "        f'{tracer.root.log_mass}\\t',\n",
+    "        particle,\n",
+    "        #        + colors.light.cyan % '['\n",
+    "        #        + (colors.light.cyan % '|').join(repr(y)[1:-1] for y in particle.context)\n",
+    "        #        + colors.light.cyan % ']'\n",
     "    )\n",
     "\n",
-    "    data.append({\n",
-    "        'context': particle.context, \n",
-    "        'logP': particle.logP, \n",
-    "        'logW': particle.logW, \n",
-    "        'logQ': particle.logQ, \n",
-    "        'logprefix': logprefix(lm, particle.context), \n",
-    "        'log_mass': log_mass,\n",
-    "    })\n",
+    "    data.append(\n",
+    "        {\n",
+    "            'context': particle.context,\n",
+    "            'logP': particle.logP,\n",
+    "            'logW': particle.logW,\n",
+    "            'logQ': particle.logQ,\n",
+    "            'logprefix': logprefix(lm, particle.context),\n",
+    "            'log_mass': log_mass,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "print(f'truncated with {tracer.root.log_mass:g} log mass left')"
    ]
@@ -148,6 +153,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "df = pd.DataFrame(data)"
    ]
   },
@@ -495,9 +501,9 @@
    ],
    "source": [
     "compare(\n",
-    "    df.logprefix, \n",
+    "    df.logprefix,\n",
     "    df.logP,\n",
-    ");#.show();"
+    ");  # .show();"
    ]
   },
   {
@@ -544,7 +550,7 @@
    ],
    "source": [
     "compare(\n",
-    "    df.logprefix, \n",
+    "    df.logprefix,\n",
     "    df.logQ,\n",
     ").show();"
    ]
@@ -582,9 +588,9 @@
    ],
    "source": [
     "compare(\n",
-    "    df.logprefix, \n",
+    "    df.logprefix,\n",
     "    df.logQ + df.logW,\n",
-    ");#.show();"
+    ");  # .show();"
    ]
   },
   {
@@ -922,7 +928,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['canonicalized'] = df.context.map(''.join).map(lm.tokenizer.encode).map(lambda context: tuple(lm._decode[y] for y in context)).map('|'.join)"
+    "df['canonicalized'] = (\n",
+    "    df.context.map(''.join)\n",
+    "    .map(lm.tokenizer.encode)\n",
+    "    .map(lambda context: tuple(lm._decode[y] for y in context))\n",
+    "    .map('|'.join)\n",
+    ")"
    ]
   },
   {
@@ -932,7 +943,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['logprefix_canonicalized'] = df.context.map(''.join).map(lm.encode_prompt).map(lambda context: logprefix(lm, context))"
+    "df['logprefix_canonicalized'] = (\n",
+    "    df.context.map(''.join)\n",
+    "    .map(lm.encode_prompt)\n",
+    "    .map(lambda context: logprefix(lm, context))\n",
+    ")"
    ]
   },
   {
@@ -1311,7 +1326,7 @@
     "pl.scatter(df.logprefix, df.logprefix_canonicalized)\n",
     "a = min(df.logprefix.min(), df.logprefix_canonicalized.min())\n",
     "b = max(df.logprefix.max(), df.logprefix_canonicalized.max())\n",
-    "pl.plot([a,b], [a,b]);"
+    "pl.plot([a, b], [a, b]);"
    ]
   },
   {
