Add example output from demo

--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "a143cb94-36e9-4ee7-a05e-c9a0cc2f2d45",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
     {
      "data": {
       "text/markdown": [
-       "Likelihood: 0.8997177535080022"
+       "Likelihood: 100.00%"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -693,7 +693,82 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Give me a sentence involving a (named) physician (ideally with specialty, address, or city name):  q\n"
+      "Give me a sentence involving a (named) physician (ideally with specialty, address, or city name):  Dr. Kay Ryan's office at 384 Oak St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing sentence `Dr. Kay Ryan's office at 384 Oak St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare`...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Code:"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```julia\n",
+       "# Create a new row trace for the hypothetical row\n",
+       "row_trace = Dict{PClean.VertexID, Any}()\n",
+       "name_key = PClean.resolve_dot_expression(trace.model, :Obs, :name)\n",
+       "row_trace[name_key] = \"Kay Ryan\"\n",
+       "address_key = PClean.resolve_dot_expression(trace.model, :Obs, :address)\n",
+       "row_trace[address_key] = \"384 Oak St\"\n",
+       "city_key = PClean.resolve_dot_expression(trace.model, :Obs, :city)\n",
+       "row_trace[city_key] = \"Baltimore\"\n",
+       "\n",
+       "# Add it to the trace\n",
+       "obs = trace.tables[:Obs].observations\n",
+       "row_id = gensym()\n",
+       "obs[row_id] = row_trace\n",
+       "\n",
+       "samples = []\n",
+       "for _ in 1:100\n",
+       "    # Perform a Partilce Gibbs MCMC move to change our current sample of the row\n",
+       "    PClean.run_smc(!(trace, :Obs, row_id, PClean.InferenceConfig(1, 10))\n",
+       "    # Accumulate the sample\n",
+       "    push!(samples, trace.tables[:Obs].rows[row_id][br_idx]\n",
+       "end\n",
+       "\n",
+       "countmap(samples)\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Likelihood: 86.67%"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, we can't actually run queries yet. 😅\n"
      ]
     }
    ],
