--- a/notes/sentence_to_pclean/demo.ipynb
+++ b/notes/sentence_to_pclean/demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8ae16ed-e3b5-441d-8f0a-5d78b9fb835a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "088033b5-c175-43e6-9332-5ffa2aa9cd59",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8e71ec4e-1a6a-4c65-9192-eaf10cc559fe",
    "metadata": {},
    "outputs": [],
@@ -84,25 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "61c079f1-91a3-4c2b-a075-56c460f12d5f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Oops, one of these examples is missing a key... `'example_output'`"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    sentence_table_row_template = string.Template(\"| $sentence | <pre>$example_output</pre> |\")\n",
@@ -137,82 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9ad06c20-4e09-4ca2-84af-285dd23c3dbc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Just had an insightful consultation with Dr. Kay Ryan in Baltimore. Feeling optimistic about my health! #HealthMatters #Baltimore\n",
-      "(Kay Ryan, Baltimore, Baltimore)\n",
-      "\n",
-      "Dr. Kay Ryan's office at 321 Pine St. in Baltimore is so welcoming and efficient. Highly recommend! #CityCare\n",
-      "(Kay Ryan, Baltimore, CityCare)\n",
-      "\n",
-      "Exploring Baltimore after an informative appointment with Dr. Kay Ryan. Loving this city's vibe! #BaltimoreAdventures #DoctorVisit\n",
-      "(Baltimore, Kay Ryan)\n",
-      "\n",
-      "Dr. Kay Ryan, a neurologist, provided excellent care today. Grateful for her expertise! #Healthcare #BaltimoreDoctors\n",
-      "(Kay Ryan, today)\n",
-      "\n",
-      "Feeling reassured after my visit to Dr. Kay Ryan in Baltimore. She's truly exceptional! #FeelingGood #CityOfCharm\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "Had a great experience with Dr. Kay Ryan at 321 Pine St. in Baltimore. Her attention to detail is unmatched! #HealthCheck\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "From diagnosis to treatment, Dr. Kay Ryan, a cardiologist, covered it all. Baltimore, you're lucky to have her! #MedicalCare\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "Just wrapped up my appointment with Dr. Kay Ryan in Baltimore. Her professionalism is top-notch. #HealthJourney\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "Dr. Kay Ryan's office in Baltimore is so efficient and welcoming. A great experience overall! #DoctorVisit #CityCare\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "Can't say enough good things about Dr. Kay Ryan, a pediatrician, in Baltimore. Truly an outstanding doctor! #Grateful\n",
-      "(Kay Ryan, Baltimore)\n",
-      "\n",
-      "Loved visiting Dr. Kilmore's obstetrics practice in Camp Hill! Can't say enough good things.\n",
-      "(Kilmore, Camp Hill)\n",
-      "\n",
-      "Dr. Kilmore in Boston saved my life with his incredible cardiology skills. Forever grateful! #BostonDocs #HeartHealth\n",
-      "(Kilmore, Boston)\n",
-      "\n",
-      "Just had a life-changing neurology consult with Dr. Faraday in Seattle. Truly a genius! #SeattleScience #NeuroExperts\n",
-      "(Faraday, Seattle)\n",
-      "\n",
-      "My skin has never been better thanks to Dr. Linwood in Denver. Highly recommend! #DenverDerm #SkinCare\n",
-      "(Linwood, Denver)\n",
-      "\n",
-      "Dr. Voss in Miami was amazing with my child’s treatment. Pediatric care at its finest! #MiamiMeds #KidsHealth\n",
-      "(Voss, Miami)\n",
-      "\n",
-      "Dr. Ravenswood in San Francisco fixed my knee like a pro. Orthopedic wizard! #SFOOrtho #BoneHealth\n",
-      "(Ravenswood, San Francisco)\n",
-      "\n",
-      "Grateful for Dr. Shapiro in Chicago who guided me through my cancer journey. The best oncologist! #ChicagoCare #FightCancer\n",
-      "(Shapiro, Chicago)\n",
-      "\n",
-      "Feeling mentally strong thanks to Dr. Everhart in NYC. Exceptional psychiatrist! #NYCWellness #MentalHealth\n",
-      "(Everhart, NYC)\n",
-      "\n",
-      "Dr. Jamison in Dallas balanced my hormones perfectly. Best endocrinologist ever! #DallasDocs #HormoneHealth\n",
-      "(Jamison, Dallas)\n",
-      "\n",
-      "Seeing clearly again thanks to Dr. Thornton in LA. Incredible ophthalmologist! #LAVisions #EyeCare\n",
-      "(Thornton, LA)\n",
-      "\n",
-      "Dr. Garrison in Phoenix fixed my indigestion and it only took one visit. Best gastroenterologist around! #PhoenixHealth #DigestiveCare\n",
-      "(Garrison, Phoenix, one)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Supporting code for entity extraction.\n",
     "_SPACY_MODEL_NAME = 'en_core_web_trf'\n",
@@ -266,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5444b2ba-605d-45cf-b7c5-57073c132990",
    "metadata": {},
    "outputs": [],
@@ -286,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5b87cf18-b455-4de3-8aae-75d3ec3a95bb",
    "metadata": {},
    "outputs": [],
@@ -305,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c65a7792-3619-4df0-9128-ed85c41dcc01",
    "metadata": {},
    "outputs": [],
@@ -336,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0a463c9d-5e48-4bdb-b6d8-0e9f8ea069ae",
    "metadata": {},
    "outputs": [],
@@ -355,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6a725710-f405-4b3a-a101-93b3a3256e14",
    "metadata": {},
    "outputs": [],
@@ -394,9 +311,12 @@
     "    inference_setup: InferenceSetupVLLM,\n",
     ") -> requests.Response:\n",
     "    #assert batch_size == inference_setup.sampler.llm._model.batch_size\n",
-    "    assert grammar == inference_setup.sampler.grammar\n",
-    "    assert (proposal == 'character' and isinstance(inference_setup, genparse.CharacterProposal))\n",
-    "    inference = inference_setup(prompt, n_particles=n_particles, temperature=temperature, max_tokens=max_tokens)\n",
+    "    #assert grammar == inference_setup.sampler.grammar\n",
+    "    #assert (proposal == 'character' and isinstance(inference_setup, genparse.CharacterProposal))\n",
+    "    #assert inference_setup.sampler.temperature == temperature\n",
+    "    # params = vllm.SamplingParams(temperature=1.0, max_tokens=128, n=25)\n",
+    "    # inference = inference_setup(prompt, n_particles=n_particles, sampling_params=params, max_tokens=max_tokens)\n",
+    "    inference = inference_setup(prompt, n_particles=n_particles, max_tokens=max_tokens)\n",
     "    return FakeResponse({\"log_ml\": None, \"posterior\": inference.posterior})"
    ]
   },
@@ -410,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "423fe5b1-ad77-46bb-8d3e-1bc026e0d8ed",
    "metadata": {},
    "outputs": [],
@@ -462,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e3b15b36-564c-4dcf-bbc5-5ec3c8ab8299",
    "metadata": {},
    "outputs": [],
@@ -713,6 +633,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "844a95ec-1069-4370-b123-d7cd3574cfca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = transformers.AutoTokenizer.from_pretrained(model_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8e38336b-6a6e-43a6-bad4-5b187cc97de2",
    "metadata": {},
    "outputs": [],
@@ -888,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844a95ec-1069-4370-b123-d7cd3574cfca",
+   "id": "ee50d6dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +944,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e3ed3a9-51f0-4553-ae3d-756423ce96ea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "inference_setup = server_model(json_grammar)"
@@ -1023,31 +955,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4891c0f-e05e-47b5-89fd-172555b1fc9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(inference_setup.sampler.llm._model.batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12b16daf-83ed-42f5-9016-dbe78379b8ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(inference_setup.sampler.llm._model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ab6bc605-9114-4e4f-8771-55b84d54001a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "responses = {}\n",
+    "local_outputs = {}\n",
     "for sentence_datum in debug_sentences:\n",
     "    sentence = sentence_datum[\"sentence\"]\n",
     "    prompt = tokenizer.apply_chat_template(\n",
@@ -1059,9 +973,13 @@
     "    logger.debug('Prompt (%d tokens): ```%s```', len(tokenizer(prompt)[\"input_ids\"]), prompt)\n",
     "\n",
     "    # ignored top_p=0.95\n",
-    "    server_inference_params = {'max_tokens': 128, 'n_particles': 15, 'temperature': 1.0, 'grammar': json_grammar}\n",
-    "    response = run_inference_vllm(prompt, inference_setup=inference_setup, **server_inference_params)\n",
-    "    responses[sentence] = response"
+    "    #server_inference_params = {'max_tokens': 128, 'n_particles': 15, 'grammar': json_grammar}\n",
+    "    #response = run_inference_vllm(prompt, inference_setup=inference_setup, **server_inference_params)\n",
+    "    #responses[sentence] = response\n",
+    "    output = inference_setup(prompt=prompt, max_tokens=128, n_particles=15)\n",
+    "    print(output.log_ml_estimate)\n",
+    "    print(output.posterior)\n",
+    "    local_outputs[sentence]"
    ]
   },
   {
